--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "g": "^2.0.1",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.4"
+    "mongoose": "^6.6.4",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
