naming conflict resolved

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "valo-skin-collection",
+  "name": "chumon-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
